
=== ppracer 0.5 alpha2 ===

2005-11-29  Volker Stroebel <volker@planetpenguin.de>
	* src/hud.*
	fixed drawing if resolution changes
	
	* src/ppogl/font.*
	use const ppogl::Vec2d&
	
	* src/loop.* src/credits.* src/splash_screen.*
	changed code to use ppogl::Vec2i

2005-11-28  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	changed some code to use ppogl::Vec2i

2005-11-27  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/base/vec2i.*
	added ppogl::Vec2i
	
	* src/phys_sim.cpp
	used ppogl::Vec2i

2005-11-26  Volker Stroebel <volker@planetpenguin.de>
	* src/tux_shadow.cpp
	changed some code to use ppogl::Vec3d
	
	* src/ppogl/base/vec* src/ppogl/base/color.*
	  src/ppogl/sg/materials.*
	moved several functions into the header files

2005-11-25  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	fixes
	
	* src/ppogl/ui/listbox.h
	fixed up/down button states

2005-11-23  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	cleanups
	
	* data/translations/en_GB.nut 
	  data/translations/nn_NO.nut
	updated translations (Karl Ove Hufthammer)
	
	* data/models/tux2/model.nut
	changed color (Sergej Kotliar)

2005-11-21  Volker Stroebel <volker@planetpenguin.de>
	* src/joystick.* data/config.nut.in
	fixed joystick support
	added class Joystick
	
	* src/*
	changed code to use new Joystick class

2005-11-06  Volker Stroebel <volker@planetpenguin.de>
	* src/course_load.cpp
	fixed crash

2005-11-04  Volker Stroebel <volker@planetpenguin.de>
	* src/fog.cpp src/gameconfig.*
	cached disable_fog
	
	* src/ui_snow.cpp
	fixed positions for modifications
	
	* src/hier.*
	added update_scene_nodes

2005-11-03  Volker Stroebel <volker@planetpenguin.de>
	* src/fps.* src/* data/config.nut.in
	added max fps for gui and racing

2005-11-02  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	replaced several macros with inline functions
	removed several unused macros
	code cleanups

2005-11-01  Volker Stroebel <volker@planetpenguin.de>
	* src/elements.* src/course_load.cpp