@@ -1,6 +1,16 @@
 
 === ppracer 0.5 alpha2 ===
 
+
+
+
+
+2005-11-30  Volker Stroebel <volker@planetpenguin.de>
+	* src/quadtree.cpp src/trackmarks.*
+	  src/course_renderer.* src/course_load.cpp
+	  src/winsys.cpp src/hier.*
+	fixed memory deallocation
+
 2005-11-29  Volker Stroebel <volker@planetpenguin.de>
 	* src/hud.*
 	fixed drawing if resolution changes
